src/test/deca/context/invalid/created/SansObjet/IncompatibleUnaryMinusType.deca
// Description:
//  Test d'un unary minus sur un booleen
// Resultats:
//  IncompatibleUnaryMinusType.deca:7:16: Error: Incompatible type for operator '-' and type 'boolean'

{
    boolean a = -true;
}